[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/fauna/bird_idle.png" type="Texture" id=1]
[ext_resource path="res://Fauna/Bird.gd" type="Script" id=2]
[ext_resource path="res://assets/art/fauna/bird_flying.png" type="Texture" id=3]

[sub_resource type="Animation" id=3]
resource_name = "flying"
length = 0.24
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FlyingSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0996839, 0.200316 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 6.0
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.5, 2.25, 2.55, 3.9, 4.5, 4.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0, 3, 0, 0, 3, 0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Bird" type="Node2D"]
script = ExtResource( 2 )
fly_speed = Vector2( 50, 50 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -2, 2 )
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flying = SubResource( 3 )
anims/idle = SubResource( 1 )

[node name="ScareRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScareRadius"]
shape = SubResource( 2 )

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="FlyingSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( -2, 2 )
texture = ExtResource( 3 )
hframes = 3

[connection signal="body_entered" from="ScareRadius" to="." method="_on_ScareRadius_body_entered"]
